style/main.css
@-moz-viewport {
    width: device-width;
    scale: 1;
}

@-ms-viewport {
    width: device-width;
    scale: 1;
}

@-o-viewport {
    width: device-width;
    scale: 1;
}

@-webkit-viewport {
    width: device-width;
    scale: 1;
}

@viewport {
    width: device-width;
    scale: 1;
}

html {
    box-sizing: border-box;
/*prevents browser from automatically resizing font*/
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
/*those will never validate*/
    font: normal 100%/1.3 'Open Sans',sans-serif;


}

*,::before,::after {
    box-sizing: inherit;
    margin: 0;
    transition: all 1000ms;
}

header {
    margin: 0;
    padding: 0;
    display: block;
    position: relative;
    overflow: hidden;
}

.img240px{
    display: block;
}
.img320px, .xl-pic, .bw-pic{
    display: none;
}


header img {
    width: 100%;
    margin: 0;
    padding: 0;
    display: block;
}



main {
    padding: 1em;
    margin: 0;
    transition: none;
}

main p{
    margin-bottom: 1em;
}

h1 {
    font-family: 'Montserrat';
    font-size: 3em;
    position: absolute;
    bottom: .15em;
    width: 100%;
    padding: 0;
    text-align: center;
    text-transform: uppercase;
    color: rgba(255,255,255,0.6);

}

h1:hover{
    cursor: default;
}


header h3 {
    position: absolute;
    bottom: 0;
    color: #fff;
    font-weight: 400;
    font-size: .8em;
    width: 100%;
    text-align: center;
    text-transform: uppercase;
}


nav ul {
    display: inline-block;
    width: 100%;
    padding: 0;
    list-style-type: none;
}

nav li {
    width: calc(100% / 3);
    float: left;
}

/*----Business Card Printable------*/

.bc{
    width: 336px;
    height: 192px;
    border: 1px dashed pink;
    clear: both;
    margin: 3em auto;
    padding: .3em;
    display: none;
}


.bc img{
    width: 40%;
    float: left;
    margin: 0;
}

.name{
    padding: .5em;
    display: block;
}

.name ul{
    list-style-type: none;
    width: 60%;
    float: left;
    margin: 10px 0 0 0;
    padding: 10px;
}

.name li{
    text-align: right;
}

.name li:nth-of-type(1){
    font-family: 'Montserrat', sans-serif;
    font-size: 1.5em;
    line-height: 1em;
    text-transform: uppercase;
    font-weight: bold;
}

.name li:nth-of-type(2){
    font-weight: bold;
    padding-bottom: .3em;
}


.name li:nth-child(n+2){
    color: #E3E3E3;
    font-size: .5em;
}




/*320 px*/
@media only screen and ( min-width: 20em) {
html {
    font-size: 110%;
    line-height: 1.4;
    transition: all 0s;
}

header h1 {
    font-size: 4em;
    bottom: -.03em;
}

header h3 {
    font-size: .85em;
    padding: 0;


}

main {
    width: 70%;
    float: left;
}

nav {
    width: 30%;
    float: left;
    margin-top: 1em;
    padding: 0;

}

nav li {
    float: left;
    width: 100%;


}

nav a:hover{
    cursor: pointer;
}

nav img{
    padding: .5em;

}


.img240px{
    display: none;
}
.img320px{
    display: block;
}
}

/*tablet*/
@media only screen and (min-width: 38em) {
html {
    font-size: 110%;
    line-height: 1.4;
}

header h1 {

    text-align: left;
    margin-left: 16px
}

header h3 {
    margin-left: 1.4em;
    text-align: left;

}

main{
    float: right;
    width: 60%;
}
nav{
    float: right;
    width: 40%;
}

nav li{
    width: calc(100% / 3);
}

}

/*large screen*/
@media only screen and (min-width: 60em) {
html {
    font-size: 120%;
    line-height: 1.5;
}


header{
     background-image: url("../images/xl-pic.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     /*I know, a negative margin is such a hack thing to do, I tried display block etc etc, it wasn't responding. I also tried overflow hidden*/
     margin: 0 0 -43px 0;
     overflow: hidden;
     display: block;
}






header h1{
    font-size: 6em;
    padding-left: 0;
    text-align: right;
    bottom: 2em;
    width: 100%;
    text-align:  center;
    color: rgba(255,255,255,0.2);
    text-shadow: 0 0 5px rgba(255,255,255,0.1);
    margin-left: 0;

}

header h1:hover {

    text-shadow: 0 0 2px rgba(255,255,255,1);
    color:rgba(255,255,255,0.5);

    -webkit-transition: opacity  3000ms ease-in-out;
    -moz-transition: opacity  3000ms ease-in-out;
    -o-transition: opacity  3000ms ease-in-out;
    transition: opacity  3000ms ease-in-out;

     -webkit-transition: text-shadow 1000ms ease-in-out;
    -moz-transition: text-shadow 1000ms ease-in-out;
    -o-transition: text-shadow 1000ms ease-in-out;
    transition: text-shadow 1000ms ease-in-out;


}


header h3{
    position: relative;
    bottom: 9.7em;
    width: 100%;
    padding: 0;
    margin: 0 auto;
    font-size: 1.25em;
    text-align: center;
    }






nav img:hover{

     -ms-transform: rotate(400deg); /* IE 9 */
    -webkit-transform: rotate(400deg); /* Chrome, Safari, Opera */
    transform: rotate(400deg);

     -webkit-transition: all 5000ms cubic-bezier(0.250,0.250,0.410,1.100);
    -moz-transition: all 500ms cubic-bezier(0.250,0.250,0.410,1.100);
    -o-transition: all 500ms cubic-bezier(0.250,0.250,0.410,1.100);
    transition: all 500ms cubic-bezier(0.250,0.250,0.410,1.100);

}




.img320px{
    display: none;
}
.xl-pic{
    display: inline-block;
    margin: 0;
    padding: 0;
}

.xl-pic:hover{
    opacity: 0.2;

     -webkit-transition: all 4000ms cubic-bezier(0.250,0.250,0.410,1.100);
    -moz-transition: all  4000ms cubic-bezier(0.250,0.250,0.410,1.100);
    -o-transition: all  4000ms cubic-bezier(0.250,0.250,0.410,1.100);
    transition: all  4000ms cubic-bezier(0.250,0.250,0.410,1.100);
}




}

/*XL screen*/
@media only screen and (min-width: 90em) {
html {
    font-size: 130%;
    line-height: 1.6;
}
}

h3{
    bottom: 10em;
}


/*PRINT*/

@media  print{

header{
    display: none;
}

main{
    display: none
    }

nav{
    display: none;
}

.bc{
    display: block;
}
}

